fix horizontal scrollbar

--- a/blocks/copyright/copyright.css
+++ b/blocks/copyright/copyright.css
@@ -1,7 +1,9 @@
 .copyright {
   text-align: center;
+  margin: auto;
   margin-bottom: 24px;
   font-size: 14px;
   line-height: 16px;
   margin-top: 0;
+  width: fit-content;
 }
