--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,9 +7,8 @@
 
 @media all and (min-width: 768px) and (max-width: 1279px) {
   .lead__image {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     position: relative;
-    left: calc(-50vw + 50%);
   }
 }
