--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,12 +1,12 @@
 .lead {
   margin: auto;
-  margin-top: 194px;
+  margin-top: 90px;
   width: 984px;
 }
 
 @media all and (min-width: 320px) and (max-width: 767px) {
   .lead {
-    margin-top: 122px;
+    margin-top: 50.15px;
     width: 100%;
   }
 }
