--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,17 +1,13 @@
 .logo {
   display: block;
   width: 270px;
-  height: 70px;
-  position: absolute;
-  top: 34px;
-  left: 50%;
-  margin-left: -135px;
+  margin: auto;
+  margin-top: 34px;
 }
 
 @media all and (min-width: 320px) and (max-width: 767px) {
   .logo {
     width: 200px;
-    margin-left: -100px;
-    top: 20px;
+    margin-top: 20px;
   }
 }
