--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -3,5 +3,4 @@
   color: #ffffff;
   font-family: "Inter";
   margin: 0;
-  overflow-x: hidden;
 }
