--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,7 +5,7 @@
 
 @media all and (min-width: 320px) and (max-width: 767px) {
   .place__image {
-    width: 100vw;
+    width: 100%
   }
 }
 
