--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,7 +14,7 @@
 
 @media all and (min-width: 768px) and (max-width: 1279px) {
   .places {
-    width: 100%;
+    width: 96.875%;
     margin-left: 3.125%;
   }
 }
